<resources>
    <string name="app_name">Nilu DataBase</string>

    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact">Contact</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="submit">SUBMIT</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="flaxen_infosoft">FLAXEN INFOSOFT</string>
    <string name="firstname">First Name:-</string>
    <string name="last_name2">Last Name:-</string>
    <string name="age2">Age:-</string>
    <string name="mobile_no2">Mobile No:-</string>
    <string name="address2">Address:-</string>
    <string name="login_user"><![CDATA[*Login User =>]]></string>
</resources>