<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/theme"
        app:cardBackgroundColor="#A3DEE8"
        app:strokeWidth="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/firstname"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="rahul"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/last_name2"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/lastNameName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="rahul"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/age2"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="rahul"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/mobile_no2"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/mobileNo"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="rahul"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/address2"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="rahul"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tvDelete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
               android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/tvUpdate"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="Update Data"
                    android:gravity="center_vertical"
                    android:textColor="#EC432C"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingHorizontal="8dp"
                    android:text="DELETE :-"
                    android:gravity="center_vertical"
                    android:textColor="#EC432C"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>