<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_weight=".3"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/white"
        android:textSize="26dp"
        tools:ignore="Suspicious0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight=".4"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <EditText
                android:id="@+id/etUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Your Passwpord"
                android:background="@drawable/input_custom"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/new_password"
                android:maxLength="15"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textColorHint="@color/black" />

            <ImageView
                android:id="@+id/iv_show_hide_password"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_visibility" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <EditText
                android:id="@+id/etUserConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Your Passwpord"
                android:background="@drawable/input_custom"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/confirm_new_password"
                android:inputType="text"
                android:maxLength="15"
                android:paddingHorizontal="16dp"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textColorHint="@color/black" />

            <ImageView
                android:id="@+id/iv_show_hide_password2"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_visibility" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/theme_stroke_background"
            android:backgroundTint="@color/theme"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:importantForAutofill="no"
            android:padding="13dp"
            android:text="SUBMIT"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>